@@ -281,6 +281,12 @@ builder {
 If your application is returning a status code that is not handled by
 [HTTP::Status](https://metacpan.org/pod/HTTP%3A%3AStatus), then the metrics may not be logged for that reponse.
 
+## psgix.informational
+
+This does not add a wrapper around the `psgix.informational`
+callback.  If you are making use of it in your code, then you will
+need to add metrics logging yourself.
+
 # SUPPORT FOR OLDER PERL VERSIONS
 
 Since v0.6.0, the this module requires Perl v5.14 or later.
